fix: announcement carousel focus on chevron buttons is now visible

--- a/src/app/remotes/announcement-banner/announcement-banner.component.scss
+++ b/src/app/remotes/announcement-banner/announcement-banner.component.scss
@@ -6,4 +6,8 @@
   .p-carousel-item.p-carousel-item-active {
     max-height: 100%;
   }
+  .p-carousel-prev:focus,
+  .p-carousel-next:focus {
+    outline: revert !important;
+  }
 }
